Fix page header spacing

--- a/src/components/About/_About.scss
+++ b/src/components/About/_About.scss
@@ -6,10 +6,6 @@
   margin: 12rem 0 0;
 }
 
-.page-header {
-  margin: 2rem;
-}
-
 .about__content {
   @include space-evenly;
 }
