--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -95,6 +95,10 @@ button:hover,
   }
 }
 
+.page-header {
+  margin: 2rem;
+}
+
 @media screen and (min-width: 1400px) {
   .main__wrapper {
     width: 1400px
